# boilerplate_django

./: .env_example  .gitignore  Readme.md  pyproject.toml
core/: settings.py
