[tool.poetry]
name = "Boilerplate Repository"
version = "0.0.1"
description = "Boilerplate code for django project with hooks"
authors = ["Aleksander Jagiełło"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
psycopg2 = "^2.9.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.0.4"
black = "^23.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.3"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
